# german_loan_risk_classification

./: README.md  agent.py  pyproject.toml
analysis/: constants.py  risk_analysis_training.ipynb  utils.py
models/: target_encoder.json  xgb_model.pkl
