[tool.poetry]
name = 'german-risk-classification'
version = "0.1.0"
description = ""
authors = ["kouen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
scipy = ">=1.2.1"
pandas = "2.0.3"
matplotlib = "3.7.5"
xgboost = "2.1.2"
category-encoders = "2.6.4"
plotly = "5.24.1"
ipykernel = "6.29.5"
mlxtend = "0.23.2"
jupyterlab = "4.3.0"
ipywidgets = "8.1.5"
nbformat = "5.10.4"
shap = "0.44.1"


[tool.poetry.group.style.dependencies]
isort = "5.13.2"
black = "24.8.0"